# rsipstack

./: Cargo.toml  README.md  build.rs
examples/: proxy.rs
examples/client/: main.rs  play_file.rs
src/: error.rs  lib.rs  rsip_ext.rs
src/dialog/: authenticate.rs  client_dialog.rs  dialog.rs  dialog_layer.rs  invitation.rs  mod.rs  registration.rs  server_dialog.rs
src/dialog/tests/: test_client_dialog.rs  test_dialog_layer.rs  test_dialog_states.rs  test_server_dialog.rs
src/transaction/: endpoint.rs  key.rs  message.rs  mod.rs  transaction.rs
src/transaction/tests/: test_client.rs  test_endpoint.rs  test_server.rs  test_transaction_states.rs
src/transport/: channel.rs  connection.rs  mod.rs  sip_addr.rs  stream.rs  tcp.rs  tcp_listener.rs  transport_layer.rs  udp.rs
src/transport/tests/: test_listener_api.rs  test_sipaddr.rs  test_stream_encoding.rs  test_via_received.rs
