[package]
name = "ftth-rsipstack"
version = "4.0.2"
edition = "2021"
description = "SIP Stack Rust library for building SIP applications (without TLS and Websocket)"
license = "MIT"
repository = "https://github.com/menhera-org/rsipstack"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "sipstack"]
authors = ["kui<kui@fourz.cn>", "Menhera.org Contributors"]
categories = ["network-programming", "multimedia"]
build = "build.rs"

[lib]

[[bin]]
name = "bench_ua"
path = "src/bin/bench_ua.rs"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
log = "0.4.28"
thiserror = "2.0.17"
tracing = "0.1.41"
tokio-util = { version = "0.7.16", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
rand = { version = "0.9.2" }
get_if_addrs = "0.5.3"
bytes = "1.10.1"
futures-util = "0.3.31"
clap = { version = "4.5.47", features = ["derive"] }
http = "1.3.1"
tokio = { version = "1.47.1", features = ["full"] }
ftth-rsip = "0.4.1"

[dev-dependencies]
dotenv = "0.15"
sdp-rs = "0.2.1"
rtp-rs = "0.6.0"
stun-rs = "0.1.11"
base64 = "0.22.1"
serde = "1.0.226"
serde_json = "1.0.145"
dasp = { version = "0.11", features = ["all"] }
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
hyper = "1.7.0"

[[example]]
name = "client"
path = "examples/client/main.rs"

[[example]]
name = "proxy"
path = "examples/proxy.rs"

[profile.release]
#strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
